auqa working with jdk17 in kiwi